# QDBus_example

Cache/Cache/: CMakeLists.txt  Cache.cpp  Cache.h  main.cpp
Cache/dbus_files/: cache_adaptor.cpp  cache_adaptor.h
Cache/dbus_files/old/: cache_adaptor.cpp  cache_adaptor.h
Hardware/Hardware/: CMakeLists.txt  Hardware.cpp  Hardware.h  main.cpp
Hardware/dbus_files/: hardware_adaptor.cpp  hardware_adaptor.h
Interfaces/: com.scythestudio.cache.xml  com.scythestudio.hardware.xml
UI/UI/: CMakeLists.txt  DbusTestItem.qml  Ui.cpp  Ui.h  main.cpp  main.qml  qml.qrc
UI/dbus_files/: cache_proxy.cpp  cache_proxy.h  hardware_proxy.cpp  hardware_proxy.h
UI/dbus_files/old/: cache_proxy.h
